--- a/src/main/resources/templates/bankServices.html
+++ b/src/main/resources/templates/bankServices.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" th:href="@{/css/main.css}">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
                 <img th:src="@{/assets/bank-icon.png}"
                      width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
@@ -34,11 +34,28 @@
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                 </ul>
+                <div style="position: fixed; right: 2%">
+                    <form class="form-inline my-2 my-lg-0" action="user/logOut">
+                        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Выйти</button>
+                    </form>
+                </div>
             </div>
         </nav>
         <div class="container-fluid">
-            <h2>Услуги</h2>
-            <a th:href="@{/}" class="btn btn-primary">Главная</a>
+            <div class="row row-center">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <div class="rounded-container">
+                        <div class="title">
+                            <div class="container-fluid">
+                                <h2 th:text="'Здравствуйте, ' + ${user}"></h2>
+                                <a th:href="@{/}" class="btn btn-primary">Главная</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
         </div>
     </body>
 </html>
