--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,18 +1,63 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Профиль</title>
-        <link rel="stylesheet" href="http://localhost:8080/bank-system/css/bootstrap.min.css">
-        <link rel="stylesheet" href="http://localhost:8080/bank-system/css/main.css">
+        <link rel="icon" th:href="@{/assets/bank-icon.png}">
+        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/css/main.css}">
     </head>
     <body>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img th:src="@{/assets/bank-icon.png}"
+                     width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/}">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#"><span class="sr-only">(current)</span> Профиль</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="bankServices">Услуги</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <div style="position: fixed; right: 2%">
+                    <form class="form-inline my-2 my-lg-0" action="user/logOut">
+                        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Выйти</button>
+                    </form>
+                </div>
+            </div>
+
+        </nav>
         <div class="container-fluid">
-            <h2>Профиль</h2>
-            <a href="http://localhost:8080/bank-system" class="btn btn-primary">Главная</a>
+            <div class="row row-center">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <div class="rounded-container">
+                        <div class="title">
+                            <div class="container-fluid">
+                                <h2 th:text="'Здравствуйте, ' + ${user}"></h2>
+                                <a th:href="@{/}" class="btn btn-primary">Главная</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
         </div>
     </body>
 </html>
