--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,6 @@
 body {
     color: #333333;
+    background-image: url("../assets/background.jpg");
 }
 
 p {
@@ -7,7 +8,19 @@ p {
 }
 
 footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+    background-color: #333333;
+    color: #ffffff;
     text-align: center;
+}
+
+.footer-card {
+    margin: 10px;
+    background-color: #95999c;
+    border-radius: .25rem;
 }
 
 a {
@@ -27,10 +40,16 @@ a {
 }
 
 .rounded-container {
-    padding: 75px;
+    padding: 40px;
     border-radius: .25rem;
-    /*box-shadow: #cccccc 0 0 100px;*/
     background: #ffffff;
+}
+
+.user-info {
+    padding: 40px;
+    border-radius: .25rem;
+    border: rgba(0,0,0,.125) 1px solid;
+    background: #f8f9fa;
 }
 
 .row-center {
@@ -87,4 +106,8 @@ a {
 .black {
     background: #333333;
     color: #ffffff;
+}
+
+.info-value {
+    color: #686868;
 }
