--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -9,10 +9,13 @@
         <link rel="icon" th:href="@{/assets/bank-icon.png}">
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/main.css}">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <script th:src="@{js/bootstrap.min.js}"></script>
     </head>
     <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="">
                 <img th:src="@{/assets/bank-icon.png}"
                      width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
             </a>
@@ -26,7 +29,7 @@
                         <a class="nav-link" th:href="@{/}">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><span class="sr-only">(current)</span> Профиль</a>
+                        <a class="nav-link active" href="profile"><span class="sr-only">(current)</span> Профиль</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="bankServices">Услуги</a>
@@ -36,12 +39,13 @@
                     </li>
                 </ul>
                 <div style="position: fixed; right: 2%">
-                    <form class="form-inline my-2 my-lg-0" action="user/logOut">
-                        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Выйти</button>
+                    <form class="form-inline my-2 my-lg-0" action="user/signOut">
+                        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
+                            <i class="fas fa-sign-out-alt"></i>
+                             Выйти</button>
                     </form>
                 </div>
             </div>
-
         </nav>
         <div class="container-fluid">
             <div class="row row-center">
@@ -49,9 +53,34 @@
                 <div class="col-md-10">
                     <div class="rounded-container">
                         <div class="title">
-                            <div class="container-fluid">
-                                <h2 th:text="'Здравствуйте, ' + ${user}"></h2>
-                                <a th:href="@{/}" class="btn btn-primary">Главная</a>
+                            <i class="fas fa-user-circle"></i>
+                            <h2>
+                                Здравствуйте,
+                                <span class="badge badge-success" th:text="${user.getUsername()}"></span>
+                            </h2>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <ul class="nav nav-pills card-header-pills">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="#">Общая информация</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Персональные данные</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Редактировать</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="card-body">
+                                <div class="user-info">
+                                    <h5>Фамилия: <span class="info-value" th:text="${user.getLastName()}"></span></h5>
+                                    <h5>Имя: <span class="info-value" th:text="${user.getFirstName()}"></span></h5>
+                                    <h5>Отчество: <span class="info-value" th:text="${user.getMiddleName()}"></span></h5>
+                                    <h5>ID паспорта: <span class="info-value" th:text="${user.getIdPassport()}"></span></h5>
+                                    <h5>Почта: <span class="info-value" th:text="${user.getUsername()}"></span></h5>
+                                </div>
                             </div>
                         </div>
                     </div>
