--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/main.css}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body>
         <div class="container">
@@ -17,12 +18,12 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6 rounded-container">
                     <h1 class="title">Авторизация</h1>
-                    <form action="user/authenticate" method="post">
+                    <form action="authenticate" method="post">
                         <div class="input-group mb-2 mr-sm-2">
                             <div class="input-group-prepend">
                                 <div class="input-group-text"><i class="fas fa-at"></i></div>
                             </div>
-                            <input type="email" name="username" class="form-control" placeholder="Введите email">
+                            <input type="text" name="idPassport" class="form-control" placeholder="Введите ID пасспорта">
                         </div>
                         <br>
                         <div class="input-group mb-2 mr-sm-2">
