Add: sign up feature implemented

--- a/src/main/resources/templates/bankServices.html
+++ b/src/main/resources/templates/bankServices.html
@@ -30,20 +30,22 @@
                         <a class="nav-link" th:href="@{/}">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="profile">Профиль</a>
+                        <a class="nav-link" th:href="@{user/profile}">Профиль</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="bankServices"><span class="sr-only">(current)</span> Услуги</a>
+                        <a class="nav-link active" th:href="@{/bankServices}"><span class="sr-only">(current)</span>
+                            Услуги</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                 </ul>
                 <div style="position: fixed; right: 2%">
-                    <form class="form-inline my-2 my-lg-0" action="user/signOut">
+                    <form class="form-inline my-2 my-lg-0" action="signOut">
                         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
                             <i class="fas fa-sign-out-alt"></i>
-                            Выйти</button>
+                            Выйти
+                        </button>
                     </form>
                 </div>
             </div>
@@ -64,11 +66,19 @@
                         <div class="title">
                             <a th:href="@{/}" class="btn btn-primary">Главная</a>
                         </div>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1"></div>
         </div>
+        <div class="col-md-1"></div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
     </body>
 </html>
