--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -18,12 +18,12 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6 rounded-container">
                     <h1 class="title">Авторизация</h1>
-                    <form action="authenticate" method="post">
+                    <form th:action="@{user/authenticate}" method="post">
                         <div class="input-group mb-2 mr-sm-2">
                             <div class="input-group-prepend">
                                 <div class="input-group-text"><i class="fas fa-at"></i></div>
                             </div>
-                            <input type="text" name="idPassport" class="form-control" placeholder="Введите ID пасспорта">
+                            <input type="text" name="idPassport" class="form-control" placeholder="Введите ID паспорта">
                         </div>
                         <br>
                         <div class="input-group mb-2 mr-sm-2">
@@ -34,7 +34,7 @@
                         </div>
                         <br>
                         <button type="submit" class="btn btn-success btn-lg">Войти</button>
-                        <a href="signUp" role="button" class="btn btn-primary btn-lg">Зарегистрироваться</a>
+                        <a th:href="@{/user/signUp}" role="button" class="btn btn-primary btn-lg">Зарегистрироваться</a>
                     </form>
                 </div>
                 <div class="col-md-3"></div>
