--- a/src/main/resources/templates/bankServices.html
+++ b/src/main/resources/templates/bankServices.html
@@ -11,8 +11,6 @@
         <link rel="stylesheet" th:href="@{/css/main.css}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
-        <script th:src="@{js/bootstrap.min.js}"></script>
     </head>
     <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -32,16 +30,22 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{user/profile}">Профиль</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" th:href="@{/bankServices}"><span class="sr-only">(current)</span>
-                            Услуги</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Действия
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <th:block>
+                                <a class="dropdown-item" th:href="@{user/signUp}">Добавить сотрудника</a>
+                            </th:block>
+                            <a class="dropdown-item" href="#">Добавить клиента</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Операции с кредитом/дебетом</a>
+                        </div>
                     </li>
                 </ul>
-                <div style="position: fixed; right: 2%">
-                    <form class="form-inline my-2 my-lg-0" action="signOut">
+                <div class="logout">
+                    <form class="form-inline my-2 my-lg-0" th:action="@{/user/signOut}">
                         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
                             <i class="fas fa-sign-out-alt"></i>
                             Выйти
