--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -18,7 +18,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6 rounded-container">
                     <h1 class="title">Авторизация</h1>
-                    <form th:action="@{user/authenticate}" method="post">
+                    <form th:action="@{/user/authenticate}" method="post">
                         <div class="input-group mb-2 mr-sm-2">
                             <div class="input-group-prepend">
                                 <div class="input-group-text"><i class="fas fa-at"></i></div>
