--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -63,6 +63,7 @@
                             <input type="password" name="password" class="form-control" placeholder="Придумайте пароль">
                         </div>
                         <br>
+                        <input type="hidden" name="idRole" value="1">
                         <button type="submit" class="btn btn-success btn-lg">Зарегистрировать</button>
                     </form>
                 </div>
