--- a/src/main/resources/templates/bankServices.html
+++ b/src/main/resources/templates/bankServices.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" th:href="@{/}">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{user/profile}">Профиль</a>
+                        <a class="nav-link" th:href="@{/profile}">Профиль</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -36,7 +36,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <th:block>
-                                <a class="dropdown-item" th:href="@{user/signUp}">Добавить сотрудника</a>
+                                <a class="dropdown-item" th:href="@{/profile/signUp}">Добавить сотрудника</a>
                             </th:block>
                             <a class="dropdown-item" href="#">Добавить клиента</a>
                             <div class="dropdown-divider"></div>
@@ -45,7 +45,7 @@
                     </li>
                 </ul>
                 <div class="logout">
-                    <form class="form-inline my-2 my-lg-0" th:action="@{/user/signOut}">
+                    <form class="form-inline my-2 my-lg-0" th:action="@{/profile/signOut}">
                         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
                             <i class="fas fa-sign-out-alt"></i>
                             Выйти
@@ -53,7 +53,6 @@
                     </form>
                 </div>
             </div>
-
         </nav>
         <div class="container-fluid">
             <div class="row row-center">
@@ -75,14 +74,14 @@
             </div>
         </div>
         <div class="col-md-1"></div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                crossorigin="anonymous"></script>
+        <script th:src="@{/js/jquery-3.3.1.js}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
                 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
                 crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
+        <script th:src="@{/js/user/User.js}"></script>
+        <script th:src="@{/js/user/userService.js}"></script>
     </body>
 </html>
