--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -19,7 +19,7 @@
                         <span>400</span>
                     </div>
                     <div class="error-message">
-                        <span>Кажется, что-то пошло не так :(</span>
+                        <span th:text="${message}"></span>
                     </div>
                     <div class="button-container">
                         <a th:href="@{/}" class="btn btn-warning btn-lg" role="button">На главную</a>
