injected main.js for html pages.

--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -21,7 +21,7 @@
                     <form th:action="@{/profile/authenticate}" method="post">
                         <div class="input-group mb-2 mr-sm-2">
                             <div class="input-group-prepend">
-                                <div class="input-group-text"><i class="fas fa-at"></i></div>
+                                <div class="input-group-text"><i class="fas fa-passport"></i></div>
                             </div>
                             <input type="text" name="idPassport" class="form-control" placeholder="Введите ID паспорта">
                         </div>
@@ -48,6 +48,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
+        <script th:src="@{/js/main.js}"></script>
         <script th:src="@{/js/user/User.js}"></script>
         <script th:src="@{/js/user/userService.js}"></script>
         <script th:src="@{/js/user/userController.js}"></script>
