--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -19,7 +19,7 @@
                         <span>404</span>
                     </div>
                     <div class="error-message">
-                        <span>Кажется, запрашиваемый Вами ресурс не найден :(</span>
+                        <span th:text="${message}">Кажется, запрашиваемый Вами ресурс не найден :(</span>
                     </div>
                     <div class="button-container">
                         <a th:href="@{/}" class="btn btn-warning btn-lg" role="button">На главную</a>
