--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -34,7 +34,7 @@
                         </div>
                         <br>
                         <button type="submit" class="btn btn-success btn-lg">Войти</button>
-                        <a th:href="@{/profile/signUp}" role="button"
+                        <a th:href="@{/profile/logUp}" role="button"
                            class="btn btn-primary btn-lg">Зарегистрироваться</a>
                     </form>
                 </div>
