--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -8,19 +8,13 @@ p {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 25%;
-    background-color: #333333;
-    color: #ffffff;
+    clear: both;
+    position: relative;
     text-align: center;
-}
-
-.footer-card {
-    margin: 10px;
-    background-color: #95999c;
-    border-radius: .25rem;
+    padding: 0 10%;
+    background: #333333;
+    color: #fafafa;
+    border-radius: .5rem .5rem 0 0;
 }
 
 a {
@@ -28,8 +22,8 @@ a {
     color: inherit;
 }
 
-.answer-radio {
-    margin: 1% 0;
+.navbar {
+    opacity: 0.9;
 }
 
 .title {
@@ -54,18 +48,6 @@ a {
 
 .row-center {
     margin: 10% 0;
-}
-
-.question {
-    margin: 5% 0;
-}
-
-.range-value {
-    font-size: 50px;
-}
-
-.answer {
-    margin-top: 2%;
 }
 
 .smooth-shadow {
