--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -32,11 +32,14 @@
                             Профиль</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/client}">Клиенты</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/bankServices}">Действия</a>
                     </li>
                 </ul>
                 <div class="logout">
-                    <form class="form-inline my-2 my-lg-0" th:action="@{/profile/signOut}">
+                    <form class="form-inline my-2 my-lg-0" th:action="@{/profile/logOut}">
                         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
                             <i class="fas fa-sign-out-alt"></i>
                             Выйти
@@ -102,6 +105,25 @@
             </div>
             <div class="col-md-1"></div>
         </div>
+        <footer>
+            <div style="font-size: 64px">
+                <a href="https://www.mastercard.by/ru-by.html" target="_blank">
+                    <i class="fab fa-cc-mastercard"></i>
+                </a>
+                <a href="https://cis.visa.com/ru_TJ" target="_blank">
+                    <i class="fab fa-cc-visa"></i>
+                </a>
+                <a href="https://pay.amazon.com" target="_blank">
+                    <i class="fab fa-cc-amazon-pay"></i>
+                </a>
+                <a href="https://www.apple.com/ru/apple-pay/" target="_blank">
+                    <i class="fab fa-cc-apple-pay"></i>
+                </a>
+                <a href="https://www.paypal.com/by/home" target="_blank">
+                    <i class="fab fa-cc-paypal"></i>
+                </a>
+            </div>
+        </footer>
         <script th:src="@{/js/jquery-3.3.1.js}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
                 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
