--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/error.css}">
     </head>
-    <body>
+    <body class="background-img">
         <div class="container-fluent">
             <div class="row">
                 <div class="col-md-1"></div>
