--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,6 +1,5 @@
 body {
     color: #333333;
-    background-image: url("../assets/background.jpg");
 }
 
 p {
@@ -20,10 +19,20 @@ footer {
 a {
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
+}
+
+.nav-link {
+    font-weight: 600;
+}
+
+.background-img {
+    background-image: url("../assets/background.jpg");
 }
 
 .navbar {
     opacity: 0.9;
+    /*background: #c6c8ca;*/
 }
 
 .title {
