--- a/src/main/resources/templates/bankServices.html
+++ b/src/main/resources/templates/bankServices.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
-    <body>
+    <body class="background-img">
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="">
                 <img th:src="@{/assets/bank-icon.png}"
@@ -34,10 +34,10 @@
                         <a class="nav-link" th:href="@{/client}">Клиенты</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link active dropdown-toggle" href="#" id="scroll-top" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Действия
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu" aria-labelledby="scroll-top">
                             <th:block>
                                 <a class="dropdown-item" th:href="@{/profile/logUp}">Добавить сотрудника</a>
                             </th:block>
