--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
-    <body>
+    <body class="background-img">
         <div class="container">
             <div class="row row-center">
                 <div class="col-md-3"></div>
