--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
-    <body>
+    <body class="background-img">
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="">
                 <img th:src="@{/assets/bank-icon.png}"
@@ -28,8 +28,9 @@
                         <a class="nav-link" th:href="@{/}">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" th:href="@{/profile}"><span class="sr-only">(current)</span>
-                            Профиль</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" id="scroll-top">
+                            <span class="sr-only">(current)</span>Профиль</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/client}">Клиенты</a>
