--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -27,7 +27,7 @@ a {
 }
 
 .background-img {
-    background-image: url("../assets/background.jpg");
+    background-image: url("../assets/280.png");
 }
 
 .navbar {
@@ -44,8 +44,9 @@ a {
 
 .rounded-container {
     padding: 40px;
-    border-radius: .25rem;
+    border-radius: .30rem;
     background: #ffffff;
+    box-shadow: 0 0 50px rgba(0,0,0,0.25);
 }
 
 .user-info {
@@ -56,7 +57,7 @@ a {
 }
 
 .row-center {
-    margin: 10% 0;
+    margin: 7% 0;
 }
 
 .smooth-shadow {
